# cyber-sentinel

./: .dockerignore  .gitignore  Dockerfile  README.md  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  test_env.py  test_scoring.py
scripts/: validate-submission.sh
server/: app.py  environment.py  tasks.py
